@@ -356,6 +356,11 @@ added menu.
 restore position of vertical/horizaton spliters.
 </p>
 </li>
+<li>
+<p>
+added creation date, due, and start date in the list of tasks.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -501,7 +506,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-07 20:03:29 CET
+Last updated 2013-12-07 22:47:54 CET
 </div>
 </div>
 </body>
