@@ -11,6 +11,7 @@ v0.0.5
  * implemented the cancel button of the task panel.
  * added menu.
  * restore position of vertical/horizaton spliters.
+ * added creation date, due, and start date in the list of tasks.
 
 v0.0.4
 ------
